@@ -7,6 +7,7 @@
 == 2.15 ==
  * Display OpenID URL on profile page (#290)
  * Backend changes to support managing aggregates on slice page (#339)
+ * Make default project match link on manual omni config page (#1005)
  * Allow new users to activate via OpenID (#1029)
  * Update dragon.maxgigapop SSL cert (#1033)
  * Remove disabled users from geni-ops-report (#1037)
